Pandas foundations checked

--- a/Chapter1Pandasfoundations.ipynb
+++ b/Chapter1Pandasfoundations.ipynb
@@ -10120,13 +10120,29 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# attempted to solve any errors encountered  if any"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:deliverable1]",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda-env-deliverable1-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
